# edman_web

./: .buildinfo  .gitignore  LICENSE.txt  README.rst  edman_web.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  search_manager.html  searchindex.js  setup.cfg
.github/workflows/: unittest.yml
_modules/: index.html
_modules/edman_web/: search_manager.html
_sources/: edman_web.rst.txt  index.rst.txt  search_manager.rst.txt
edman_web/: __init__.py  file_manager.py  search_manager.py
tests/: test_file_manager.py  test_search_manager.py  test_web_manager.py
tests/ini/: test_db.ini.sample
