[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "edman_web"
description = "Sub-package of edman for web applications."
authors = [
    {name = "Masaki Ohno", email = "masakio@post.kek.jp"},
]
readme = "README.rst"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "pymongo~=4.6.2",
    "edman~=2024.4.9",
    "Werkzeug~=3.0.2",
    "Pillow~=10.3.0"
]
version = "2024.4.9"

[project.urls]
"documentation" = "https://ryde.github.io/edman_web/"
"repository" = "https://github.com/ryde/edman_web"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
edman_web = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]