[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "edman_web"
description = "Sub-package of edman for web applications."
authors = [
    {name = "Masaki Ohno", email = "masakio@post.kek.jp"},
]
readme = "README.rst"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "pymongo~=4.8.0",
    "edman~=2024.8.21",
    "Werkzeug~=3.0.4",
    "Pillow~=10.4.0",
    "numpy~=2.1.1",
    "opencv-python~=4.10.0.84",
    "imutils~=0.5.4"
]
version = "2024.9.12"

[project.urls]
"documentation" = "https://ryde.github.io/edman_web/"
"repository" = "https://github.com/ryde/edman_web"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
edman_web = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.mypy]
[[tool.mypy.overrides]]
module = "imutils"
ignore_missing_imports = true