[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "edman_web"
description = "Sub-package of edman for web applications."
authors = [
    {name = "Masaki Ohno", email = "masakio@post.kek.jp"},
]
readme = "README.rst"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "pymongo~=4.11",
    "edman~=2025.1.31",
    "Werkzeug~=3.1.3",
    "Pillow~=11.1.0",
    "numpy~=2.2.2",
    "opencv-python~=4.11.0.86",
    "imutils~=0.5.4"
]
version = "2025.1.31"

[project.urls]
"documentation" = "https://ryde.github.io/edman_web/"
"repository" = "https://github.com/ryde/edman_web"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
edman_web = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]

[tool.mypy]
[[tool.mypy.overrides]]
module = "imutils"
ignore_missing_imports = true