[metadata]
name = edman_web
version = 2023.4.5
author = Masaki Ohno
author_email = masakio@post.kek.jp
license = MIT License
description = sub-package of edman for web applications.
url = https://github.com/ryde/edman_web
long_description = file: README.rst
long_description_content_type = text/x-rst
classifier =
    License :: OSI Approved :: MIT License
    Topic :: Database :: Front-Ends
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    pymongo>=4.3.3
    edman>=2023.4.5
    Werkzeug>=2.2.3
    Pillow>=9.5.0

[options.packages.find]
exclude =
    tests